Fix spacing issues

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -511,7 +511,6 @@ input:focus {
   }
   .sponsor {
     text-align: center;
-    margin: 50px 0;
     img {
       width: 100%;
     }
@@ -521,21 +520,25 @@ input:focus {
   }
   .platinum {
     width: 100%;
+    margin: 50px 0;
   }
   .gold {
     width: 50%;
     padding: 0 5%;
     float: left;
+    margin: 40px 0;
   }
   .silver {
     width: 33%;
     padding: 0 5%;
     float: left;
+    margin: 30px 0;
   }
   .bronze, .api {
     width: 25%;
     padding: 0 5%;
     float: left;
+    margin: 15px 0;
   }
   .clear {
     clear: both;
